🐛 resolve <code /> text legibility

--- a/src/styles/components/_codeSnippet.scss
+++ b/src/styles/components/_codeSnippet.scss
@@ -14,11 +14,9 @@
     width: 100%;
     @include mobile-view {
       padding-top: 40px !important;
-      font-size: 11px !important;
     }
     @include desktop-view {
       padding-top: 30px !important;
-      font-size: 12px !important;
     }
   }
 
@@ -26,7 +24,7 @@
     @include mobile-view {
       padding-right: 30px !important;
       float: left;
-      font-size: 11px !important;
+      font-size: 0.7em !important;
     }
     @include desktop-view {
       font-size: 12px !important;
